[package]
name = "filedrop"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http1", "multipart", "tokio"], default-features = false }
html = "0.6.3"
pnet = "0.34.0"
tokio = { version = "1.37.0", features = ["fs", "net", "rt"] }
tower-http = { version = "0.5.2", features = ["fs"] }
