[package]
name = "filedrop"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http1", "multipart", "tokio"], default-features = false }
pnet = "0.34.0"
qrcode = { version = "0.13", features = ["svg"], default-features = false }
regex-lite = "0.1.5"
tokio = { version = "1.37.0", features = ["fs", "net", "rt"] }
tower-http = { version = "0.5.2", features = ["fs"], default-features = false }
